@@ -20081,17 +20081,25 @@ int main() {
                         SimpleVector<char *> *tokens = 
                             tokenizeString( m.saidText );
 
-                        char **tokensArray = 
-                            tokens->getElementArray();
+                        char *cleanedString;
+                        if( tokens->size() > 0 ) {
                         
-                        // join words with single spaces
-                        char *cleanedString = join( tokensArray,
-                                                    tokens->size(),
-                                                    " " );
+                            char **tokensArray = 
+                                tokens->getElementArray();
                         
-                        tokens->deallocateStringElements();
+                            // join words with single spaces
+                            cleanedString = join( tokensArray,
+                                                  tokens->size(),
+                                                  " " );
+                        
+                            tokens->deallocateStringElements();
+                            delete [] tokensArray;
+                            }
+                        else {
+                            cleanedString = stringDuplicate( "" );
+                            }
+
                         delete tokens;
-                        delete [] tokensArray;
                         
                         delete [] m.saidText;
                         m.saidText = cleanedString;
